@@ -71,3 +71,4 @@
 2024-10-04 new method to get the component version from the core
 2024-10-05 working on reading/saving ccx core data into .cub
 2024-10-05 found autocleanup issue on windows
+2024-10-07 fixed autocleanup issue on windows
